--- a/public/.htaccess
+++ b/public/.htaccess
@@ -14,3 +14,5 @@ php_value memory_limit 150M
 php_value max_execution_time 300
 php_flag short_open_tag On
 php_flag session.use_trans_sid Off
+php_flag display_errors ON
+
